Build: 인증 로직 구현을 위한 라이브러리 설치

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.17",
     "bcrypt": "^5.1.0",
+    "chalk": "4.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
